# django-react-jwt

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  Makefile  pyproject.toml
api/api/: auth.py  jwt.py  settings.py  urls.py
api/example/: urls.py  views.py
react/: Dockerfile  package-lock.json  package.json
react/src/: App.tsx
react/src/context/: session.tsx
react/src/pages/: Example.tsx  Login.tsx
